# esp-lws

./: .gitmodules  CMakeLists.txt  sdkconfig  sdkconfig copy  sdkconfig.h  sdkconfig.old
components/libwebsockets/: CMakeLists.txt  README.md  idf_component.yml
main/: CMakeLists.txt  blink_example_main.c  devices.c  idf_component.yml  my_data.h  protocol_lws_minimal_server_echo.c
